--- a/transaction-dispute-app/src/App.css
+++ b/transaction-dispute-app/src/App.css
@@ -1,13 +1,12 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+/*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
@@ -35,4 +34,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
