drawer for dispute form added, needs more building out before api endpoint

--- a/transaction-dispute-app/src/App.css
+++ b/transaction-dispute-app/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --main-color: rgb(0,47,108);
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -5,6 +9,8 @@
 .App {
   text-align: center;
 }
+
+
 
 /*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
