--- a/transaction-dispute-app/src/components/Login.css
+++ b/transaction-dispute-app/src/components/Login.css
@@ -8,7 +8,7 @@
 
 .background {
     position: absolute;
-    background-color: rgb(0,47,108);
+    background-color: var(--main-color);
     width: 100vw;
     height: 70vh;
     bottom: 0;
@@ -47,10 +47,10 @@ input[type=text], input[type=password] {
 }
 
 button[type=submit] {
-    background-color: rgb(0,47,108);
+    background-color: var(--main-color);;
     color: white;
     padding: 6px;
-    border: 1px solid rgb(0,47,108);
+    border: 1px solid var(--main-color);;
     border-radius: 4px;
 }
 
