--- a/transaction-dispute-app/src/App.css
+++ b/transaction-dispute-app/src/App.css
@@ -10,7 +10,35 @@
   text-align: center;
 }
 
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.column {
+  flex-direction: column;
+}
+
+.row {
+  flex-direction: row;
+}
+
+.small-font {
+  font-size: 0.75rem;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.banner {
+  width: 100%;
+  height: 10px;
+  background-color: var(--main-color);
+}
 
 /*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
