--- a/transaction-dispute-app/src/components/TransactionDetails.css
+++ b/transaction-dispute-app/src/components/TransactionDetails.css
@@ -3,37 +3,16 @@
     height: 100vh;    
 }
 
-.header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.banner {
-    width: 100%;
-    height: 10px;
-    background-color: var(--main-color);
-}
-
-.content {
-    padding: 1em 3em;
+.transactions__content {
+    padding: 2em 3em;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
 }
 
-.flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.price > p {
+.price > p, .date > p, .info > p {
     margin: 0;
     align-self: flex-start;
-}
-
-.column {
-    flex-direction: column;
 }
 
 .charge {
@@ -41,20 +20,71 @@
     color: var(--main-color);
 }
 
-.date {
-   
+.date__row-1 {
+    display: flex; 
+    justify-content: flex-start; 
+    align-items: center;
+    align-self: flex-start;
+}
+
+.date__row-1 > p {
+    margin: 0; 
+    font-size: 1.25rem;
+}
+
+.date_row-2 {
+    margin: 0;
 }
 
 .info {
-
+    justify-content: flex-start !important;
 }
 
-.small-font {
-    font-size: 0.75rem;
+.info > p {
+    margin-top: 0.4em;
+    font-weight: 500;
+    font-size: 1.15rem;
+}
+
+.calendar_icon, .storefront_icon {
+    margin-right: 4px;
+    color: var(--main-color) !important;
+}
+
+.storefront_icon {
+    align-self: flex-start;
+}
+
+.actions__container {
+    padding: 0 1em;
+    width: 100%;
+}
+
+.dispute {
+    color: var(--main-color);
+    opacity: 0.8;
+}
+
+.dispute > .dispute_button {
+    transform: scale(0.75);
 }
 
 @media screen and (max-width: 568px){
     .container {
         width: 90vw;
+    }
+
+    .transactions__content {
+        padding: 0.75em;
+        grid-template-columns: 1fr;
+    }
+
+    .info > p {
+        margin-top: 0.4em;
+        font-size: 1rem;
+    }
+
+    .actions__container {
+        justify-content: flex-start !important;
     }
 }
